# Threepio

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  rollup.config.js  tox.ini
docs/: supported_translations_PyTorch.md  (+2 more)
docs-crawler/: README.md  format_json.py  match_functions.py  pyproject.toml  requirements.txt
docs-crawler/docs/: aggregate_crawler_output.py  run_crawlers.bat  run_crawlers.sh  tfjs-functions.txt  torch-functions.txt  translations.py
docs-crawler/docs/docs/: items.py  pipelines.py  settings.py
docs-crawler/docs/docs/spiders/: jax_spider.py  keras_spider.py  numpy_spider.py  sk_spider.py  sklearn_spider.py  tf_spider.py  tfjs_spider.py  torch_spider.py
docs-crawler/docs/output/: tf.json  tfjs.json  torch.json
docs-crawler/docs/output/1.4.0/: torch.json
docs-crawler/docs/output/jax/: 0.1.59.json
docs-crawler/docs/output/keras/: 2.3.0.json
docs-crawler/docs/output/numpy/: 1.17.0.json
docs-crawler/docs/output/sk/: 0.23.1.json
docs-crawler/docs/output/sklearn/: 0.23.1.json
docs-crawler/docs/output/tf/: 2.1.json
docs-crawler/docs/output/tfjs/: 1.5.1.json
docs-crawler/docs/output/torch/: 1.4.0.json
js/: README.md  (+3 more)
pythreepio/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
pythreepio/pythreepio/: command.py  errors.py  threepio.py  utils.py
pythreepio/static/: mapped_commands_full.json
pythreepio/tests/: test_pythreepio.py  test_tf_torch.py  test_tfjs_torch.py  test_torch_tf.py  test_torch_tfjs.py  util.py
pythreepio/tests/fixtures/: tf.py  tfjs.py  torch.py
(+36 files in other folders)
