[tool.poetry]
name = "torch-scrape"
version = "0.1.0"
description = ""
authors = ["Mike Nolan <me@michael-nolan.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.8"
ipdb = "^0.12.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
