[tool.poetry]
name = "threepio"
version = "0.1.0"
description = ""
authors = ["OpenMined"]

[tool.poetry.dependencies]
python = "^3.7"
pip = "^20.0.0"
numpy = "^1.18"
torch = "^1.4"
tensorflow = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=1.0.3", "pip>=20.0.0"]
build-backend = "poetry.masonry.api"
