[metadata]
name = openmined.threepio
version = attr: pythreepio.__version__
url = https://github.com/openmined/threepio
author = openmined
license = Apache License, Version 2.0
description = A multi-language library for translating commands between PyTorch, TensorFlow, and TensorFlow.js
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
* = static/*.json
